fix overflow

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h4 {
 .skills .card {
     height: 600px;
     width: 350px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     border-radius: 0px;
     text-align: center;
     line-height: 30px;
